[project]
name = "timbertrees"
version = "0.1.0"
description = ""
authors = [{name = "Norman Rasmussen", email = "norman@rasmussen.co.za>"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "unityparser (>=3,<4)",
    "pydot",
    "json5",
    "yattag",
    "rich",
    "braceexpand",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
