[project]
name = "timbertrees"
version = "0.1.0"
description = ""
authors = [{name = "Norman Rasmussen", email = "norman@rasmussen.co.za>"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pydot",
    "json5 (>=0.9.26)",
    "yattag",
    "rich",
    "braceexpand",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
